# fetch_data

./: .gitignore  LOB_process.ipynb  README.md  makefile  package-lock.json  pyproject.toml  todo.md  trades_process.ipynb
src/binance_listener/: config.py  main.py  messages.py  orderbook.py  writer.py
src/hyperliquid/: main.py  websocket_manager.py
src/process/: process_lob.py  process_trades.py
utils/: daily_merge.py  dataset_processor.py  visualization.py
