[project]
name = "lob_research"
version = "0.1.0"
description = "Hyperliquid LOB Data Collector"
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "typing_extensions>=4.0.0",
    "websocket-client>=1.6.0",
    "eth-account>=0.8.0",
    "msgpack>=1.0.0",
    "eth-utils>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
